# aws-lc-rs

./: Cargo.toml
aws-lc-fips-sys/: Cargo.toml
aws-lc-fips-sys/builder/: cmake_builder.rs  main.rs  sys_bindgen.rs
aws-lc-fips-sys/src/: lib.rs
aws-lc-fips-sys/tests/: sanity-tests.rs
aws-lc-rs/: Cargo.toml  build.rs
aws-lc-rs-testing/: Cargo.toml
aws-lc-rs-testing/benches/: aead_benchmark.rs  agreement_benchmark.rs  cipher_benchmark.rs  digest_benchmark.rs  ecdsa_benchmark.rs  ed25519_benchmark.rs  hkdf_benchmark.rs  hmac_benchmark.rs  kem_benchmark.rs  pbkdf2_benchmark.rs  quic_benchmark.rs  rsa_benchmark.rs
aws-lc-rs-testing/tests/: agreement_tests.rs  hkdf_test.rs  quic_test.rs
aws-lc-rs/examples/: cipher.rs  digest.rs
aws-lc-rs/src/: aead.rs  agreement.rs  bn.rs  cbb.rs  cbs.rs  cipher.rs  cmac.rs  digest.rs  ec.rs  ed25519.rs  evp_pkey.rs  fips.rs  hex.rs  hkdf.rs  hmac.rs  kdf.rs  kem.rs  key_wrap.rs  lib.rs  pbkdf2.rs  pqdsa.rs  ptr.rs  rand.rs  rsa.rs  signature.rs  tls_prf.rs  unstable.rs
aws-lc-rs/src/aead/: aead_ctx.rs  chacha20_poly1305_openssh.rs  nonce.rs  poly1305.rs  rand_nonce.rs  tls.rs  unbound_key.rs
aws-lc-rs/src/aead/nonce_sequence/: counter32.rs  counter64.rs
aws-lc-rs/src/aead/tests/: fips.rs
aws-lc-rs/src/aead/tests/fips/: chacha20_poly1305_openssh.rs  quic.rs
aws-lc-rs/src/agreement/: agreement_tests.rs  ephemeral.rs  parsed_public_key_tests.rs
aws-lc-rs/src/agreement/tests/: fips.rs
aws-lc-rs/src/cipher/: aes.rs  block.rs  chacha.rs  key.rs  padded.rs  streaming.rs
aws-lc-rs/src/cipher/tests/: fips.rs
aws-lc-rs/src/cmac/tests/: fips.rs
aws-lc-rs/src/digest/: digest_ctx.rs
aws-lc-rs/src/digest/tests/: fips.rs
aws-lc-rs/src/ec/: encoding.rs  key_pair.rs  signature.rs
aws-lc-rs/src/hkdf/tests/: fips.rs
aws-lc-rs/src/hmac/tests/: fips.rs
aws-lc-rs/src/kdf/: kbkdf.rs  sskdf.rs
aws-lc-rs/src/key_wrap/: tests.rs
aws-lc-rs/src/key_wrap/tests/: fips.rs
aws-lc-rs/src/pbkdf2/tests/: fips.rs
aws-lc-rs/src/pqdsa/: key_pair.rs  signature.rs
aws-lc-rs/src/rsa/: encoding.rs  encryption.rs  key.rs  signature.rs
aws-lc-rs/src/rsa/encryption/: oaep.rs  pkcs1.rs
aws-lc-rs/src/rsa/tests/: fips.rs
aws-lc-rs/src/signature/: parsed_public_key_tests.rs
aws-lc-rs/src/signature/tests/: fips.rs
aws-lc-rs/src/tls_prf/tests/: fips.rs
aws-lc-rs/tests/: aead_test.rs  basic_aead_test.rs  cipher_test.rs  digest_test.rs  ecdsa_tests.rs  ed25519_tests.rs  hkdf_test.rs  kdf_test.rs  pqdsa_test.rs  rsa_test.rs  unsealed_rand_test.rs
aws-lc-sys/: Cargo.toml
aws-lc-sys/builder/: cc_builder.rs  cmake_builder.rs  main.rs  sys_bindgen.rs
aws-lc-sys/src/: universal_crypto.rs
links-testing/: Cargo.toml  build.rs
links-testing/src/: main.rs
