[package]
name = "aws-lc-rs-testing"
authors = ["AWS-LibCrypto"]
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
ring-benchmarks = []
openssl-benchmarks = []
ring-sig-verify = ["aws-lc-rs/ring-sig-verify"]
bindgen = ["aws-lc-rs/bindgen"]
fips = ["aws-lc-rs/fips"]
asan = ["aws-lc-rs/asan"]

[dev-dependencies]
aws-lc-rs = { workspace = true, features = ["ring-sig-verify", "unstable"] }
untrusted.workspace = true
paste.workspace = true
criterion.workspace = true
ring.workspace = true
openssl.workspace = true

[[bench]]
name = "aead_benchmark"
harness = false

[[bench]]
name = "digest_benchmark"
harness = false

[[bench]]
name = "hkdf_benchmark"
harness = false

[[bench]]
name = "hmac_benchmark"
harness = false

[[bench]]
name = "pbkdf2_benchmark"
harness = false

[[bench]]
name = "quic_benchmark"
harness = false

[[bench]]
name = "rsa_benchmark"
harness = false

[[bench]]
name = "ecdsa_benchmark"
harness = false

[[bench]]
name = "ed25519_benchmark"
harness = false

[[bench]]
name = "agreement_benchmark"
harness = false

[[bench]]
name = "cipher_benchmark"
harness = false

[[bench]]
name = "kem_benchmark"
harness = false
