[package]
name = "aws-lc-rs"
authors = ["AWS-LibCrypto"]
version = "1.15.4"
# this crate re-exports whatever sys crate that was selected
links = "aws_lc_rs_1_15_4_sys"
edition.workspace = true
rust-version.workspace = true
keywords = ["crypto", "cryptography", "security"]
license = "ISC AND (Apache-2.0 OR ISC)"
description = "aws-lc-rs is a cryptographic library using AWS-LC for its cryptographic operations. This library strives to be API-compatible with the popular Rust library named ring."
documentation = "https://docs.rs/crate/aws-lc-rs"
homepage = "https://github.com/aws/aws-lc-rs"
repository = "https://github.com/aws/aws-lc-rs"
# Exclude tests and test data from published crate
exclude = [
    "third_party/NIST/*",
    "tests/**/*",
    "*.txt",
    "*.p8",
    "*.der",
    "*.bin",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "aws_lc_rs_docsrs"]
features = ["unstable"]

[features]
alloc = []
default = ["aws-lc-sys", "alloc", "ring-io", "ring-sig-verify"]
ring-io = ["dep:untrusted"]
ring-sig-verify = ["dep:untrusted"]
bindgen = ["aws-lc-sys?/bindgen", "aws-lc-fips-sys?/bindgen"]
asan = ["aws-lc-sys?/asan", "aws-lc-fips-sys?/asan"]
test_logging = []
unstable = []
prebuilt-nasm = ["aws-lc-sys?/prebuilt-nasm"]
dev-tests-only = []

# require non-FIPS
non-fips = ["aws-lc-sys"]

# require FIPS
# NOTE: fips intentionally does NOT activate dep:aws-lc-fips-sys.
# Code paths are gated with `all(feature = "fips", not(feature = "non-fips"))`,
# so when both are active (e.g. --all-features) FIPS is dead and the dep is never built.
fips = []

[dependencies]
untrusted = { workspace = true, optional = true }
aws-lc-sys = { workspace = true, optional = true }
aws-lc-fips-sys = { workspace = true, optional = true }
zeroize.workspace = true

[dev-dependencies]
paste.workspace = true
lazy_static.workspace = true
clap.workspace = true
hex.workspace = true
regex.workspace = true

[package.metadata.cargo-udeps.ignore]
development = ["which", "home", "regex", "regex-automata", "regex-syntax", "proc-macro2", "jobserver", "cc", "once_cell"]
