[package]
name = "links-testing"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
default = ["aws-lc-sys"]
aws-lc-rs = ["dep:aws-lc-rs"]
aws-lc-rs-fips = ["aws-lc-rs", "aws-lc-rs/fips"]
aws-lc-sys = ["dep:aws-lc-sys"]
aws-lc-fips-sys = ["dep:aws-lc-fips-sys"]

[dependencies]
aws-lc-rs = { workspace = true, optional = true }
aws-lc-sys = { workspace = true, optional = true, default-features = true }
aws-lc-fips-sys = { workspace = true, optional = true }

[build-dependencies]
cc.workspace = true
toml_edit.workspace = true

[package.metadata.cargo-udeps.ignore]
normal = ["aws-lc-rs", "aws-lc-sys", "aws-lc-fips-sys"] # the sys crate is only used through a C library build
